--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "exam-prep-app",
   "version": "0.0.1",
+  "homepage": "https://0xDRAGOS.github.io/exam-prep",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "chart.js": "^4.4.9",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
